Windows title and icon edited

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>YoutubeVideosFormatingWebNativeTool</title>
+    <title>Seyfer Studios: YouTube's Videos Formating Web Native Tool</title>
     <!-- <base href="/"> -->
     <base href="./" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
