--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     />
   </head>
   <body class="mat-typography">
+    <!-- App main component -->
     <app-root></app-root>
   </body>
 </html>
